src/ESP32/build/log/idf_py_stdout_output_42640
Command: ninja flash
[1/12] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\GitHub\Firmware\src\ESP32\build\bootloader\esp-idf\esptool_py && C:\Users\takeu\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/takeu/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/GitHub/Firmware/src/ESP32/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
In file included from C:/GitHub/Firmware/src/ESP32/main/main.cpp:7:
C:/GitHub/Firmware/src/ESP32/main/bleserver.hpp:53:9: warning: missing initializer for member 'esp_ble_adv_params_t::peer_addr' [-Wmissing-field-initializers]
   53 |         };
      |         ^
C:/GitHub/Firmware/src/ESP32/main/bleserver.hpp:53:9: warning: missing initializer for member 'esp_ble_adv_params_t::peer_addr_type' [-Wmissing-field-initializers]
[5/12] Building C object esp-idf/ps3_controller_host/CMakeFiles/__idf_ps3_controller_host.dir/src/ps3_l2cap.c.obj
FAILED: esp-idf/ps3_controller_host/CMakeFiles/__idf_ps3_controller_host.dir/src/ps3_l2cap.c.obj 
ccache C:\Users\takeu\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/GitHub/Firmware/src/ESP32/build/config -IC:/GitHub/Firmware/components/ps3_controller_host/src/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/common/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/stack/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/api/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/stack/l2cap/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/osi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/newlib/platform_include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/include/freertos -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/esp_additions/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/heap/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/heap/tlsf -IC:/Users/takeu/esp/v5.5/esp-idf/components/log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32/register -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/platform_port/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_common/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/port/soc -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/port/include/private -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/deprecated_include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include/apps -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include/apps/sntp -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/lwip/src/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/freertos/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/include/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/api/include/api -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/btc/profile/esp/blufi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/btc/profile/esp/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/hci_log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/ble_log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/api/include/api -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/tinycrypt/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/tinycrypt/port -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_timer/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/include/local -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_event/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_phy/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_phy/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_netif/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/nvs_flash/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/GitHub/Firmware/src/ESP32=. -fmacro-prefix-map=C:/Users/takeu/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ps3_controller_host/CMakeFiles/__idf_ps3_controller_host.dir/src/ps3_l2cap.c.obj -MF esp-idf\ps3_controller_host\CMakeFiles\__idf_ps3_controller_host.dir\src\ps3_l2cap.c.obj.d -o esp-idf/ps3_controller_host/CMakeFiles/__idf_ps3_controller_host.dir/src/ps3_l2cap.c.obj -c C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c
C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c:22:8: error: unknown type name 'BleServer'
   22 | extern BleServer* bleServerInstance;
      |        ^~~~~~~~~
C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c: In function 'ps3_l2cap_connect_ind_cback':
C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c:196:5: error: implicit declaration of function 'esp_ble_gap_stop_advertising' [-Wimplicit-function-declaration]
  196 |     esp_ble_gap_stop_advertising();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c:197:5: error: implicit declaration of function 'esp_ble_gatts_stop_service' [-Wimplicit-function-declaration]
  197 |     esp_ble_gatts_stop_service(bleServerInstance->service_handle);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
C:/GitHub/Firmware/components/ps3_controller_host/src/ps3_l2cap.c:197:49: error: request for member 'service_handle' in something not a structure or union
  197 |     esp_ble_gatts_stop_service(bleServerInstance->service_handle);
      |                                                 ^~
ninja: build stopped: subcommand failed.
